--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>Document</title>
+    <link href="./css/modern-normalize.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <!--header-->
+    <header class="header">
+        <div class="container">
+        <div class="logo">
+            <img src="./images/scissors.svg" alt="ножницы">arber
+            </div>
+
+            <nav class="navigation">
+               <ul class="site-nav-list">
+                    <li class="item-list">
+                        <a href="#home"  class="link current">Home</a>
+                    </li>
+                    <li class="item-list">
+                        <a href="#history"  class="link">History</a>
+                    </li>
+                    <li class="item-list">
+                        <a href="#service" class="link">Service</a>
+                    </li>
+                    <li class="item-list">
+                        <a href="#gallery" class="link">Gallery</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="user-menu"> 
+                <li><button type="button"><img src="./images/profile-1.svg" alt="profile"></button></li>
+                <li><button type="button"><img src="./images/notification-1.svg" alt="notification"></button></li>
+                <li><button type="button" class="button primery"> Appointment </button></li> 
+            </ul>
+        </div>
+    </header>
+
+    <!-- hero -->
+
+    <hero>
+
+    </hero>
+        <div class="container">
+            <h1><span class="accent">Hairstyle</span>ReflectsThe PersonalityInside You</h1>
+            <p class="text">It is a long established fact that a reader will be distracted by the readable content of a page w
+            hen looking at.</p>
+        </div>
+        <img src="./images/image-1.jpg" alt="барбер бреет бороду клиенту">
+    </section>
+
+    <section class="section">
+        <div class="container">
+
+
+
+            </div>
+    </section>
+</main>
+    
+
+</body>
+</html>
 
