добавляет первую секцию

--- a/index.html
+++ b/index.html
@@ -59,65 +59,67 @@
 
         <!-- hero -->
 
-        <hero>
+        <hero class="hero-section">
             <div class="container">
-                <div class="">
-                    <h1><span class="accent">Hairstyle</span>ReflectsThe PersonalityInside You</h1>
-                    <p class="text">It is a long established fact that a reader will be distracted by the readable content of a page w
+                <!-- <div class=""> -->
+                    <h1 class="hero-title"><span class="accent">Hairstyle</span>Reflects The Personality Inside You</h1>
+                    <p class="text hero-text">It is a long established fact that a reader will be distracted by the readable content of a page w
                     hen looking at.</p>
                     <button type="button" class="button herro-button"> Get Started </button>
-                </div> 
-                <img src="./images/image-1.jpg" alt="барбер бреет бороду клиенту"  width="1234px" height="821px" >
+                <!-- </div>  -->
+                <!-- <img src="./images/image-1.jpg" alt="барбер бреет бороду клиенту"  width="1234px" height="821px" > -->
             </div>
         </hero>
                 
         <!-- Наша история -->
-        <section class="section">
+        <section class="section history-section">
             <div class="container">
-                <div class="">
-                    <h2> Our <span class="accent">History</span></h2>
-                    <p class="text">It is a long established fact that a reader will be  distracted by the readable content of a page w
-                        hen looking at.</p>
-                    <p class="text">It is a long established fact that a reader will be  distracted by the readable content of a page w
-                        hen looking at.</p>
+                <!-- <div class=""> -->
+                    <h2 class="section-title">Our <span class="accent">History</span></h2>
+                    <ul class="history">
+                        <li class="text history-text">It is a long established fact that a reader will be distracted by the readable content of a page w
+                            hen looking at.</li>
+                        <li class="text history-text">It is a long established fact that a reader will be distracted by the readable content of a page w
+                            hen looking at.</li>
+                    </ul>    
                     <button type="button" class="button container-button"> Learn more </button>
-                </div> 
-                <img src="./images/image-2.jpg" alt="барберы с большим инструментом" width="968px" height="968px">  
+                <!-- </div>  -->
+                <!-- <img src="./images/image-2.jpg" alt="барберы с большим инструментом" width="968px" height="968px">   -->
             </div>
         </section>
 
         <!-- Услуги -->
-        <section class="section">
+        <section class="section services-section">
             <div class="container">
-                <h2>Services We<span class="accent">Provide</span></h2>
-                <ul>
-                    <li> 
+                <h2 class="section-title">Services We <br> <span class="accent">Provide</span></h2>
+                <ul class="services service-icon">
+                    <li class="icon-item"> 
                         <a href="" class="">
-                            <svg class="">
-                                <use href="../images/group-1.svg"></use>
+                            <svg class="icon-svg">
+                                <use href="./images/scissors-1.svg"></use>
                             </svg>
                             <h3 class="">Hair Cut</h3>
-                            <p class="">long established fact that a re acted by the readable content of
+                            <p class="text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
-                    <li> 
+                    <li class="icon-item"> 
                         <a href="" class="">
-                            <svg class="">
-                                <use href="/images/electric-razor-1.svg"></use>
+                            <svg class="icon-svg">
+                                <use href="./images/electric-razor-1.svg"></use>
                             </svg>
                             <h3 class="">Beard Cut</h3>
-                            <p class="">long established fact that a re acted by the readable content of
+                            <p class="text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
-                    <li> 
+                    <li class="icon-item"> 
                         <a href="" class="">
-                            <svg class="">
-                                <use href="/images/cleanser-1.svg"></use>
+                            <svg class="icon-svg">
+                                <use href="./images/cleanser-1.svg"></use>
                             </svg>
                             <h3 class="">Facial Pack</h3>
-                            <p class="">long established fact that a re acted by the readable content of
+                            <p class="text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
@@ -129,7 +131,7 @@
         <!-- Галерея -->
         <section class="section">
             <div class="container">
-                <h2>Our<span class="accent">Gallery</span></h2>
+                <h2 class="section-title">Our<span class="accent">Gallery</span></h2>
                 <ul>
                     <li>
                         <img src="" alt="">
@@ -158,7 +160,7 @@
     <footer class="footer">
         <div class="container">
             <p class="logo">arber</p>
-            <p class="">It is a long established fact that a reader will be distracted by the readable </p>
+            <p class="text">It is a long established fact that a reader will be distracted by the readable </p>
             <ul>
                 <li class="social-list">
                     <a class="link social-link" href=""> 
