--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
 
             <nav class="navigation">
                <ul class="site-nav-list">
-                    <li class="item-list">
+                    <li class="item-list list">
                         <a href="#home"  class="link current">Home</a>
                     </li>
-                    <li class="item-list">
+                    <li class="item-list list">
                         <a href="#history"  class="link">History</a>
                     </li>
-                    <li class="item-list">
+                    <li class="item-list list">
                         <a href="#service" class="link">Service</a>
                     </li>
-                    <li class="item-list">
+                    <li class="item-list list">
                         <a href="#gallery" class="link">Gallery</a>
                     </li>
                 </ul>
             </nav>
             <ul class="user-menu"> 
-                <li>
+                <li class="list button-list">
                     <button  class="button-link" type="button">
                         <img src="./images/profile-1.svg" alt="profile">
                     </button>
                 </li>
-                <li>
+                <li class="list button-list">
                     <button class="button-link" type="button">
                         <img src="./images/notification-1.svg" alt="notification">
                     </button>
-                </li>
+                </li class="list button-list">
                 <li>
                     <button type="button" class="button primery-button"> Appointment </button>
                 </li> 
@@ -62,7 +62,7 @@
         <hero class="hero-section">
             <div class="container">
                 <!-- <div class=""> -->
-                    <h1 class="hero-title"><span class="accent">Hairstyle</span>Reflects The Personality Inside You</h1>
+                    <h1 class="hero-title"><span class="accent">Hairstyle </span>Reflects The Personality Inside You</h1>
                     <p class="text hero-text">It is a long established fact that a reader will be distracted by the readable content of a page w
                     hen looking at.</p>
                     <button type="button" class="button herro-button"> Get Started </button>
@@ -95,31 +95,37 @@
                 <ul class="services service-icon">
                     <li class="icon-item"> 
                         <a href="" class="">
-                            <svg class="icon-svg">
-                                <use href="./images/scissors-1.svg"></use>
-                            </svg>
-                            <h3 class="">Hair Cut</h3>
-                            <p class="text">long established fact that a reacted by the readable content of
+                            <div class="icon-svg">
+                                <svg class="" width="65" height="58">
+                                    <use href="./images/icons.svg#scissors" ></use>
+                                </svg>
+                            </div>
+                            <h3 class="title-services">Hair Cut</h3>
+                            <p class="servise-text text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
                     <li class="icon-item"> 
                         <a href="" class="">
-                            <svg class="icon-svg">
-                                <use href="./images/electric-razor-1.svg"></use>
-                            </svg>
-                            <h3 class="">Beard Cut</h3>
-                            <p class="text">long established fact that a reacted by the readable content of
+                            <div class="icon-svg">
+                                <svg class="" width="97" height="97">
+                                    <use href="./images/icons.svg#razor"></use>
+                                </svg>
+                            </div>
+                            <h3 class="title-services">Beard Cut</h3>
+                            <p class="servise-text text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
                     <li class="icon-item"> 
                         <a href="" class="">
-                            <svg class="icon-svg">
-                                <use href="./images/cleanser-1.svg"></use>
-                            </svg>
-                            <h3 class="">Facial Pack</h3>
-                            <p class="text">long established fact that a reacted by the readable content of
+                            <div class="icon-svg">
+                                <svg class="" width="66" height="66">
+                                    <use href="./images/icons.svg#cleanser" width="66" height="66" ></use>
+                                </svg>
+                            </div>
+                            <h3 class="title-services">Facial Pack</h3>
+                            <p class="servise-text text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
@@ -129,27 +135,27 @@
         </section>
 
         <!-- Галерея -->
-        <section class="section">
+        <section class="section gallery-section">
             <div class="container">
                 <h2 class="section-title">Our<span class="accent">Gallery</span></h2>
-                <ul>
-                    <li>
-                        <img src="" alt="">
+                <ul class="gallery-section-list">
+                    <li class="gallery-list">
+                        <img src="./images/gallery-1.jpg" alt="" width="435" height="435">
                     </li>
-                    <li>
-                        <img src="" alt="">
+                    <li class="gallery-list">
+                        <img src="./images/gallery-2.jpg" alt="" width="435" height="435">
                     </li>
-                    <li>
-                        <img src="" alt="">
+                    <li class="gallery-list">
+                        <img src="./images/gallery-3.jpg" alt="" width="435" height="435">
                     </li>
-                    <li>
-                        <img src="" alt="">
+                    <li class="gallery-list">
+                        <img src="./images/gallery-4.jpg" alt="" width="435" height="435">
                     </li>
-                    <li>
-                        <img src="" alt="">
+                    <li class="gallery-list">
+                        <img src="./images/gallery-5.jpg" alt="" width="435" height="435">
                     </li>
-                    <li>
-                        <img src="" alt="">
+                    <li class="gallery-list">
+                        <img src="./images/gallery-6.jpg" alt="" width="435" height="435">
                     </li>
                 </ul>
                 <button type="button" class="button gallery-button"> View All </button>
