--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--header-->
     <header class="header">
         <div class="container header-container">
-        <p class="logo">
+        <p class="logo header-logo">
             <!-- <img src="./images/scissors.svg" alt="ножницы"> -->
             arber
             </p>
@@ -89,43 +89,43 @@
         </section>
 
         <!-- Услуги -->
-        <section class="section services-section">
+        <section class="section service-section">
             <div class="container">
                 <h2 class="section-title">Services We <br> <span class="accent">Provide</span></h2>
-                <ul class="services service-icon">
+                <ul class="service service-icon">
                     <li class="icon-item"> 
-                        <a href="" class="">
+                        <a href="" class="service-icon-item">
                             <div class="icon-svg">
                                 <svg class="" width="65" height="58">
                                     <use href="./images/icons.svg#scissors" ></use>
                                 </svg>
                             </div>
-                            <h3 class="title-services">Hair Cut</h3>
-                            <p class="servise-text text">long established fact that a reacted by the readable content of
+                            <h3 class="title-service">Hair Cut</h3>
+                            <p class="service-text text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
                     <li class="icon-item"> 
-                        <a href="" class="">
+                        <a href="" class="service-icon-item">
                             <div class="icon-svg">
                                 <svg class="" width="97" height="97">
                                     <use href="./images/icons.svg#razor"></use>
                                 </svg>
                             </div>
-                            <h3 class="title-services">Beard Cut</h3>
-                            <p class="servise-text text">long established fact that a reacted by the readable content of
+                            <h3 class="title-service">Beard Cut</h3>
+                            <p class="service-text text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
                     <li class="icon-item"> 
-                        <a href="" class="">
+                        <a href="" class="service-icon-item">
                             <div class="icon-svg">
                                 <svg class="" width="66" height="66">
                                     <use href="./images/icons.svg#cleanser" width="66" height="66" ></use>
                                 </svg>
                             </div>
-                            <h3 class="title-services">Facial Pack</h3>
-                            <p class="servise-text text">long established fact that a reacted by the readable content of
+                            <h3 class="title-service">Facial Pack</h3>
+                            <p class="service-text text">long established fact that a reacted by the readable content of
                                 hen looking at.</p>
                         </a>
                     </li>
@@ -137,25 +137,31 @@
         <!-- Галерея -->
         <section class="section gallery-section">
             <div class="container">
-                <h2 class="section-title">Our<span class="accent">Gallery</span></h2>
+                <h2 class="section-title">Our <span class="accent">Gallery</span></h2>
                 <ul class="gallery-section-list">
-                    <li class="gallery-list">
-                        <img src="./images/gallery-1.jpg" alt="" width="435" height="435">
+                    <li class="gallery-list list">
+                        <div class="overlay"></div>
+                        <img src="./images/gallery-1.jpg" alt="Барбер за работой" width="435" height="435">
                     </li>
-                    <li class="gallery-list">
-                        <img src="./images/gallery-2.jpg" alt="" width="435" height="435">
+                    <li class="gallery-list list">
+                        <div class="overlay"></div>
+                        <img src="./images/gallery-2.jpg" alt="Барбер за работой" width="435" height="435">
                     </li>
-                    <li class="gallery-list">
-                        <img src="./images/gallery-3.jpg" alt="" width="435" height="435">
+                    <li class="gallery-list list">
+                        <div class="overlay"></div>
+                        <img src="./images/gallery-3.jpg" alt="Барбер за работой" width="435" height="435">
                     </li>
-                    <li class="gallery-list">
-                        <img src="./images/gallery-4.jpg" alt="" width="435" height="435">
+                    <li class="gallery-list list">
+                        <div class="overlay"></div>
+                        <img src="./images/gallery-4.jpg" alt="Барбер за работой" width="435" height="435">
                     </li>
-                    <li class="gallery-list">
-                        <img src="./images/gallery-5.jpg" alt="" width="435" height="435">
+                    <li class="gallery-list list">
+                        <div class="overlay"></div>
+                        <img src="./images/gallery-5.jpg" alt="Барбер за работой" width="435" height="435">
                     </li>
-                    <li class="gallery-list">
-                        <img src="./images/gallery-6.jpg" alt="" width="435" height="435">
+                    <li class="gallery-list list">
+                        <div class="overlay"></div>
+                        <img src="./images/gallery-6.jpg" alt="Барбер за работой" width="435" height="435">
                     </li>
                 </ul>
                 <button type="button" class="button gallery-button"> View All </button>
@@ -165,26 +171,26 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="logo">arber</p>
-            <p class="text">It is a long established fact that a reader will be distracted by the readable </p>
-            <ul>
-                <li class="social-list">
+            <p class="logo footer-logo">arber</p>
+            <p class="footer-text text">It is a long established fact that a reader will be distracted by the readable </p>
+            <ul class="social-section-list">
+                <li class="social-list list">
                     <a class="link social-link" href=""> 
-                        <svg class="social-icon icon" width="67px" height="67px">
+                        <svg class="social-icon icon" width="19px" height="38px">
                             <use href="./images/icons.svg#icon-facebook"></use> 
                         </svg> 
                     </a>
                 </li>
-                <li class="social-list">
+                <li class="social-list list">
                     <a class="link social-link" href="">
-                        <svg class="social-icon icon" width="67px" height="67px">
+                        <svg class="social-icon icon" width="32px" height="26px">
                             <use href="./images/icons.svg#icon-twitter"></use> 
                         </svg>
                     </a>
                 </li>
-                <li class="social-list">
+                <li class="social-list list">
                     <a class="link social-link" href="">
-                        <svg class="social-icon icon" width="67px" height="67px">
+                        <svg class="social-icon icon" width="28px" height="30px">
                             <use href="./images/icons.svg#icon-google"></use> 
                         </svg>
                     </a>
