--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <button class="button-link" type="button">
                         <img src="./images/notification-1.svg" alt="notification">
                     </button>
-                </li class="list button-list">
-                <li>
+                </li>
+                <li class="list button-list">
                     <button type="button" class="button primery-button"> Appointment </button>
                 </li> 
             </ul>
@@ -59,7 +59,7 @@
 
         <!-- hero -->
 
-        <hero class="hero-section">
+        <section class="hero-section">
             <div class="container">
                 <!-- <div class=""> -->
                     <h1 class="hero-title"><span class="accent">Hairstyle </span>Reflects The Personality Inside You</h1>
@@ -69,7 +69,7 @@
                 <!-- </div>  -->
                 <!-- <img src="./images/image-1.jpg" alt="барбер бреет бороду клиенту"  width="1234px" height="821px" > -->
             </div>
-        </hero>
+        </section>
                 
         <!-- Наша история -->
         <section class="section history-section">
